updated document to return name and date
