# src/models/types/document.ts
@@ -1,5 +1,7 @@
 export type Document = {
     documentId : string,
+    documentName : string,
+    createdOn : string,
     recommendationId : string,
     html : string
 };
